--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .header{
-    background-color: rgba(7, 105, 233, 0.5);
+    background-color: rgb(7, 105, 233);
     height: 80px;
     width: 100%;
     /* dejar fijo la barra de navegacion */
@@ -43,6 +43,7 @@ body{
 .logo-img{
     width: 80px;
     height: 80px;
+    font-size: 10px;
 }
 
 .nav-menu{
@@ -67,11 +68,105 @@ body{
 }
 
 .nav-menu-link:hover{
-    background-color: rgb(3, 68, 114);
+    background-color: #034472;
     transition: 0.5s;
 }
 
-/* Contacto */
+/* INICIO */
+.section-inicio{
+    border-style: solid;
+    border-color: #034472;
+    margin-bottom: 10px;
+    text-align: justify;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.section-inicio h3{
+    text-align: center;
+    padding: 10px 0px;
+}
+
+.section-inicio p{
+    text-align: center;
+    padding: 10px;
+}
+
+.section-inicio-link{
+    text-align: center;
+}
+
+.section-inicio-button{
+    margin: 10px;
+    background-color: transparent;
+    font-weight: bold;
+    border: 2px solid #034472;
+    border-radius: 3px;
+}
+
+.section-inicio-button:hover{
+    background-color: #034472;
+    transition: 0.5s;
+}
+
+/* TIENDA */
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.container-box{
+    width: 300px;
+    margin: 5px;
+    border-radius: 5px;
+    border: 2px solid #034472;
+    background-color: #74a9cf;
+}
+
+.container-box img{
+    width: 100%;
+    height: 300px;
+}
+
+.container-box h3{
+    text-align: center;
+    font-size: 1em;
+    font-weight: bold;
+    margin: 0 3px;
+    color: black;
+}
+
+.container-box p{
+    text-align: justify;
+    line-height: 1.5em;
+    padding: 10px;
+}
+
+.container-box-div{
+    width: 100%;
+    text-align: center;
+}
+
+.container-box-div-button{
+    font-size: 20px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #3b404d;
+    font-weight: bold;
+    border: 2px solid #034472;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.container-box-div-button:hover{
+    background-color: #0e212e;
+    color: #fff;
+    transition: 0.5s;
+}
+
+
+/* CONTACTO */
 /* Estilos al formulario */
 .form{
     width: 450px;
@@ -128,7 +223,7 @@ textarea{
     }
 }
 
-/* Ubicación */
+/* UBICAION */
 .contacto{
     display: flex;
     justify-content: center;
