--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,19 @@
 
 body{
     font-family: sans-serif;
-    background-color: aliceblue;
-    /* dejar fijo la barra de navegacion */
-    /* padding: 90px 20px 0px; */
+    background-color: white;
 }
 
 .header{
-    background-color: rgb(7, 105, 233);
-    height: 80px;
+    background-color: rgba(11, 14, 47, 0.3);
+    height: 70px;
     width: 100%;
-
-    /* dejar fijo la barra de navegacion */
-    /* position: fixed;
-    top: 0;
-    left: 0; */
 }
 
 .nav{
     display: flex;
-    justify-content: space-evenly;
-    margin: auto 30px ;
+    justify-content: space-around;
+    margin: auto 20px ;
     margin-left: 40px;
 }
 
@@ -34,8 +27,8 @@ body{
 }
 
 .logo-img{
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     /* font-size: 10px; */
 }
 
@@ -46,12 +39,12 @@ body{
 }
 
 .nav-menu-item{
-    font-size: 18px;
+    font-size: 15px;
     margin: 0 15px;
-    line-height: 80px;
+    line-height: 70px;
     text-transform: uppercase;
     /* Nunca corta el contenido */
-    width: max-content;
+    width: max-content; 
 }
 
 .nav-menu-link{
@@ -62,7 +55,7 @@ body{
 }
 
 .nav-menu-link:hover{
-    background-color: #034472;
+    background-color: rgba(11, 14, 47, 0.5);
     transition: 0.5s;
 }
 
@@ -73,7 +66,6 @@ body{
     width: 80%;
     /* Vertical | Horizontal */
     margin: 10px auto;
-    background: linear-gradient(rgb(0, 251, 255), blue);
 }
 
 .section-inicio h2{
@@ -214,13 +206,12 @@ body{
 /* Estilos al formulario */
 .form{
     width: 450px;
-    /* Centramos el formulario horizontalmente */
-    margin: auto;
-    background: rgba(7, 105, 233, 0.2);
+    background: rgb(188, 191, 194);
+    /* background: rgba(7, 105, 233, 0.2); */
     padding: 10px 20px;
     margin: 20px auto;
     border-radius: 7px;
-    box-shadow: 7px 13px 37px #000;
+    /* box-shadow: 7px 13px 37px #000; */
 }
 
 .form h2{
@@ -254,8 +245,8 @@ textarea{
 }
 
 .button{
-    background-color: #31384A;
-    color: #fff;
+    background-color: rgba(11, 14, 47, 0.5);
+    color: black;
     padding: 20px;
     border-radius: 3px;
 }
@@ -264,7 +255,7 @@ textarea{
     cursor: pointer;
 }
 
-/* UBICAION */
+/* UBICACION */
 .contacto{
     display: flex;
     justify-content: center;
