--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@
 body{
     font-family: sans-serif;
     background-color: white;
+    width: 100%;
 }
 
 .header{
     background-color: rgba(11, 14, 47, 0.3);
     height: 70px;
     width: 100%;
+    min-width: 800px;
 }
 
 .nav{
@@ -29,7 +31,6 @@ body{
 .logo-img{
     width: 70px;
     height: 70px;
-    /* font-size: 10px; */
 }
 
 .nav-menu{
@@ -116,7 +117,6 @@ body{
     border-radius: 5px;
     border: 2px solid #034472;
     background-color: #74a9cf;
-    
 }
 
 .container-box img{
@@ -161,7 +161,49 @@ body{
 }
 
 /* GALERÍA */
+.section-galeria{
+    margin: auto 0;
+}
+
 .galeria-container{
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto ;
+}
+
+.galeria-box{
+    width: 30%;
+    margin-top: 5px;
+}
+
+.galeria-box img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+/* .container{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto ;
+}
+
+.container-box{
+    width: 300px;
+    margin: 10px 5px;
+    border-radius: 5px;
+    border: 2px solid #034472;
+    background-color: #74a9cf;
+}
+
+.container-box img{
+    width: 100%;
+    height: 300px;
+} */
+/* .galeria-container{
     display: flex;
     padding: 5px;
     flex-wrap: wrap;
@@ -169,15 +211,16 @@ body{
 .galeria-container-img{
     flex: 33%;
     padding: 5px;
+    flex-wrap: wrap;
 }
 
 .galeria-container-img img{
     width: 100%;
     margin-top: 5px;
     border-radius: 5px;
-}
+} */
 
-@media (max-width: 767px){
+/* @media (max-width: 767px){
     .galeria-container-img{
         flex: 100%;
     }
@@ -187,7 +230,7 @@ body{
     .galeria-container-img{
         flex: 50%;
     }
-}
+} */
 
 /* Sobre nosotros */
 .nosotros-h2{
@@ -207,11 +250,9 @@ body{
 .form{
     width: 450px;
     background: rgb(188, 191, 194);
-    /* background: rgba(7, 105, 233, 0.2); */
     padding: 10px 20px;
     margin: 20px auto;
     border-radius: 7px;
-    /* box-shadow: 7px 13px 37px #000; */
 }
 
 .form h2{
@@ -282,25 +323,3 @@ textarea{
     width: 450px;
     border-radius: 3px;
 }
-
-
-
-/* Smartphone */
-/* @media (max-width: 767px){
-    
-} */
-
-/* Tablet */
-/*@media (min-width: 768px) and (max-width: 1023px){
-    
-} */
-
-/* Escritorio */
-/* @media (min-width: 1024px){
-
-} */
-
-/* Escritorio */
-/* @media (min-width: 1280px){
-    
-} */
