--- a/css/style.css
+++ b/css/style.css
@@ -162,75 +162,24 @@ body{
 
 /* GALERÍA */
 .section-galeria{
-    margin: auto 0;
+    display: flex;
+    justify-content: center;
 }
 
 .galeria-container{
-    width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 0 auto ;
-}
-
-.galeria-box{
-    width: 30%;
-    margin-top: 5px;
-}
-
-.galeria-box img{
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-}
-/* .container{
     width: 80%;
+    height: auto;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 0 auto ;
+    flex-flow: wrap;
+    justify-content: center;
 }
 
-.container-box{
-    width: 300px;
-    margin: 10px 5px;
-    border-radius: 5px;
-    border: 2px solid #034472;
-    background-color: #74a9cf;
-}
-
-.container-box img{
-    width: 100%;
-    height: 300px;
-} */
-/* .galeria-container{
-    display: flex;
-    padding: 5px;
-    flex-wrap: wrap;
-}
 .galeria-container-img{
-    flex: 33%;
-    padding: 5px;
-    flex-wrap: wrap;
-}
-
-.galeria-container-img img{
-    width: 100%;
-    margin-top: 5px;
+    width: 350px;
+    height: 500px;
+    margin: 5px;
     border-radius: 5px;
-} */
-
-/* @media (max-width: 767px){
-    .galeria-container-img{
-        flex: 100%;
-    }
 }
-
-@media (min-width: 768px) and (max-width: 1023px){
-    .galeria-container-img{
-        flex: 50%;
-    }
-} */
 
 /* Sobre nosotros */
 .nosotros-h2{
