--- a/css/style.css
+++ b/css/style.css
@@ -9,53 +9,51 @@ body{
     width: 100%;
 }
 
-.header{
-    background-color: rgba(11, 14, 47, 0.3);
-    height: 70px;
+header{
     width: 100%;
-    min-width: 800px;
+    background-color: rgba(11, 14, 47, 0.3);    
 }
 
 .nav{
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: space-around;
-    margin: auto 20px ;
-    margin-left: 40px;
+}
+
+.nav-ul{
+    width: 70%;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.nav-li{
+    width: max-content;
 }
 
 .nav-link{
+    font-weight: 700;
+    font-size: 20px;
     color: black;
     text-decoration: none;
-}
-
-.logo-img{
-    width: 70px;
-    height: 70px;
-}
-
-.nav-menu{
-    display: flex;
-    margin-right: 40px;
-    list-style: none;
-}
-
-.nav-menu-item{
-    font-size: 15px;
-    margin: 0 15px;
-    line-height: 70px;
     text-transform: uppercase;
-    /* Nunca corta el contenido */
-    width: max-content; 
-}
-
-.nav-menu-link{
-    color: black;
-    text-decoration: none;
-    padding: 8px 12px;
+    margin: 10px 0;
+    padding: 5px 10px;
     border-radius: 3px;
 }
+.nav-logo{
+    display: flex;
+    text-align: center;
+}
+.nav-logo img{
+    width: 50px;
+    height: 50px;
+}
 
-.nav-menu-link:hover{
+.nav-link:hover{
     background-color: rgba(11, 14, 47, 0.5);
     transition: 0.5s;
 }
@@ -70,7 +68,7 @@ body{
 }
 
 .section-inicio h2{
-    color: rgb(241, 183, 10);
+    color: rgb(27, 43, 56);
     text-align: center;
     padding: 10px 0px;
 }
@@ -90,7 +88,7 @@ body{
     margin: 10px;
     padding: 10px 0;
     color: white;
-    background-color: #0e212e;
+    background-color: rgb(75, 76, 83);
     font-weight: bold;
     border: none;
     /* border: 2px solid #034472; */
@@ -98,7 +96,7 @@ body{
 }
 
 .section-inicio-button:hover{
-    background-color: #034472;
+    background-color: #2d4557;
     transition: 0.5s;
 }
 
@@ -115,8 +113,8 @@ body{
     width: 300px;
     margin: 10px 5px;
     border-radius: 5px;
-    border: 2px solid #034472;
-    background-color: #74a9cf;
+    border: 2px solid #343637;
+    background-color: rgb(211, 219, 225);
 }
 
 .container-box img{
@@ -147,9 +145,9 @@ body{
     font-size: 20px;
     margin: 10px;
     padding: 10px;
-    background-color: #3b404d;
+    background-color: rgba(11, 14, 47, 0.5);
     font-weight: bold;
-    border: 2px solid #034472;
+    border: none;
     border-radius: 3px;
     text-align: center;
 }
@@ -218,7 +216,6 @@ input, textarea, .button{
     padding: 7px;
     font-size: 17px;
     border: none;
-
 }
 
 textarea{
